스택
https://www.acmicpc.net/problem/10828